<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_addgame_container_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addgame.AddGameFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollViewAddGames"
        android:layout_width="@dimen/widthScroll"
        android:layout_height="@dimen/heightScroll"
        android:layout_marginTop="@dimen/marginTopScroll"
        android:layout_marginBottom="@dimen/marginBottomScroll"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutAddGames"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:layout_marginTop="@dimen/marginTop"
                android:hint="@string/tittle"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_round_title_24"
                app:startIconContentDescription="@string/tittle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:layout_marginTop="@dimen/marginTop"
                android:hint="@string/description"
                app:layout_constraintTop_toBottomOf="@+id/tittle"
                app:startIconDrawable="@drawable/ic_round_description_24"
                app:startIconContentDescription="@string/description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/released"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:layout_marginTop="@dimen/marginTop"
                android:hint="@string/released"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:startIconDrawable="@drawable/ic_round_info_24"
                app:startIconContentDescription="@string/released"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:layout_marginTop="@dimen/marginTop"
                android:hint="@string/category"
                app:layout_constraintTop_toBottomOf="@+id/released"
                app:startIconDrawable="@drawable/ic_round_category_24"
                app:startIconContentDescription="@string/category"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:layout_marginTop="@dimen/marginTop"
                android:hint="@string/genres"
                app:layout_constraintTop_toBottomOf="@+id/category"
                app:startIconDrawable="@drawable/ic_round_sports_golf_24"
                app:startIconContentDescription="@string/genres"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/platforms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:layout_marginTop="@dimen/marginTop"
                android:hint="@string/platforms"
                app:layout_constraintTop_toBottomOf="@+id/genres"
                app:startIconDrawable="@drawable/ic_round_computer_24"
                app:startIconContentDescription="@string/platforms"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gamemodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:layout_marginTop="@dimen/marginTop"
                android:hint="@string/gamemodes"
                app:layout_constraintTop_toBottomOf="@+id/platforms"
                app:startIconDrawable="@drawable/ic_round_games_24"
                app:startIconContentDescription="@string/gamemodes"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:layout_marginTop="@dimen/marginTop"
                android:hint="@string/cover"
                app:layout_constraintTop_toBottomOf="@+id/gamemodes"
                app:startIconDrawable="@drawable/ic_round_image_24"
                app:startIconContentDescription="@string/cover"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/screenshots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:layout_marginTop="@dimen/marginTop"
                android:hint="@string/screenshots"
                app:layout_constraintTop_toBottomOf="@+id/cover"
                app:startIconDrawable="@drawable/ic_round_photo_library_24"
                app:startIconContentDescription="@string/screenshots"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ageratings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStart"
                android:layout_marginEnd="@dimen/marginEnd"
                android:layout_marginTop="@dimen/marginTop"
                android:hint="@string/ageratings"
                app:layout_constraintTop_toBottomOf="@+id/screenshots"
                app:startIconDrawable="@drawable/ic_round_looks_3_24"
                app:startIconContentDescription="@string/ageratings"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>